Add final write-up

--- a/latex write up/abstract.tex
+++ b/latex write up/abstract.tex
@@ -2,9 +2,8 @@
 % \begin{abstract} and \end{abstract} decorators.
 
 \begin{abstract}
-This is a machine learning project that focused on predicting the quality of red and white wine using existing datasets. In this project, we will train, validate, and test four regression models: the linear regression model, the SGD (Stochastic Gradient Descent) model, the Ridge model (L-2 norm), and the Lasso model (L-1 norm). After conducting series of experiments on these models, we rank their performances based on the results of wine quality prediction. Our analysis shows that Ridge gives the highest score, outperforming the other three, for both red and white wine. We think such model can be useful to support educational wine tasting activities to improve wine production, and can help businesses better understand consumer needs.
- \textbf{Do \emph{not}
-include any citations in the abstract.}
+This project focused on using machine learning to predict the quality of red and white wine using existing datasets. In this project, we tested five regression models: linear regression, stochastic gradient descent (SGD), ridge regression (using the L-2 norm), LASSO (using the L-1 norm), and \textt{SGDClassifier}. After conducting a series of experiments using these models, we ranked their performances based on the results of wine quality prediction. We found that \texttt{SGDClassifier} performed the best, but among the models discussed in class, ridge regression performed the best. This was true for both red and white wine. The best models used a combination of grid search with cross-validation and second degree polynomials. We think this project can be used to support wine marketing and quality control efforts, and can help businesses better understand consumer needs.
+
 
 
 
