--- a/latex write up/intro.tex
+++ b/latex write up/intro.tex
@@ -2,11 +2,11 @@
 % section. We'll deal with labels later.
 \section{Introduction}
 \label{sec:intro}
-Wine is one of the most popular alcoholic beverages in the world, and the wine industry is a multi-billion dollar industry that boosts the economy of a number of US states. With the thousands of varieties of wine on the market currently, an important question arises: Which one should you buy? Wine experts can of course rate the quality of a wine, but the average consumer does not always have easy access to such expertise. In this paper, we attempt to predict the quality of a wine given a number of its physicochemical properties using datasets from Cortez et al.(2009). A machine learning algorithm that could accurately predict the quality of a wine given some of its features could be instrumental in bringing the capability to evaluate the quality of wine to consumers that don't have any special training.\\
+Wine is one of the most popular alcoholic beverages in the world, and the wine industry is a multi-billion dollar industry that boosts the economy of a number of US states. With the thousands of varieties of wine on the market currently, an important question arises: Which one should you buy? Wine experts can of course rate the quality of a wine, but the average consumer does not always have easy access to such expertise. In this paper, we attempt to predict the quality of a wine given a number of its physicochemical properties. A machine learning algorithm that can accurately predict the quality of a wine given some of its features could be instrumental in bringing the capability to evaluate the quality of wine to consumers that don't have any special training.\\
 
-Our dataset consists of two files, \path{winequality-red.csv} and \path{winequality-white.csv}, containing red wine and white wine data respectively. The red wine dataset includes information about $1599$ wines, and the white wine dataset includes information about $4898$ wines. The type of information included in both datasets is the same. A quality column holds information about the quality of wine as rated by wine experts who rated the quality of each wine between $0$(very bad) and $10$(very excellent). This quality data is what we are interested in predicting, and will henceforth be referred to as the target variable. The datasets also include columns that detail information regarding the fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide, total sulfur dioxide, density, pH, sulphates, and alcohol content of each wine. These 11 variables make up the set of features that will be used to predict the target or the quality. The features are all in floating point format while the target is in integer format.\\
+Our dataset consists of two files, \path{winequality-red.csv} and \path{winequality-white.csv} \cite{dataset} , containing red wine and white wine data respectively. The red wine dataset includes information about $1599$ wines, and the white wine dataset includes information about $4898$ wines. The information included in both datasets is the same. A quality column holds information about the quality of wine as rated by wine experts with scores between $0$(very bad) and $10$(very excellent). This quality data is what we are interested in predicting, and will henceforth be referred to as the target variable. The datasets also include columns that detail information regarding the fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide, total sulfur dioxide, density, pH, sulphates, and alcohol content of each wine. These $11$ variables make up the set of features that will be used to predict the target or the quality. The features are all in floating point format while the target is in integer format.\\
 
-Next, we will provide a brief explanation of the models we used while solving this problem and also provide an overview of the preprocessing that the data goes through. Following that, we will conclude by summarizing the performance of our models, and comparing and analyzing the results.\\
+Next, we will provide a brief explanation of the models we used while solving this problem as well as an overview of the preprocessing that the data goes through. Following that, we will conclude by summarizing the performance of our models, and comparing and analyzing the results.\\
 
 
 
