--- a/latex write up/main.tex
+++ b/latex write up/main.tex
@@ -49,8 +49,8 @@
 % is useful for typesetting URLs and email addresses (it uses the
 % Courier font).
 \title{Prediction of Wine Quality Using Machine Learning}
- \author{Alan Turing \and John von Neumann\\
- \url{{alturing, jovonneumann}@davidson.edu}\\
+ \author{Anubhav Roy Bhattacharya \and Chuxuan (Sophie) Yang\\
+ \url{{anroybhattacharya, soyang}@davidson.edu}\\
  Davidson College\\
  Davidson, NC 28035\\
  U.S.A.}
