--- a/latex write up/project1.bib
+++ b/latex write up/project1.bib
@@ -18,7 +18,7 @@
 
 % Citation for a book
 @book{aima,
-    author = {Russell, Stuart J. and Norvig, Peter},
+    author = {Wilcox R. R.},
     citeulike-article-id = {709475},
     citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=773294},
     isbn = {0137903952},
@@ -32,14 +32,14 @@
 }
 
 % Citation for a paper
-@article{turing1936,
-  author = {Turing, Alan M.},
-  journal = {Proceedings of the London Mathematical Society},
-  number = 42,
-  pages = {230--265},
-  title = {On Computable Numbers, with an Application to the {E}ntscheidungsproblem},
-  volume = 2,
-  year = 1936
+@article{aia,
+  author = {Rand R. Wilcox},
+  journal = {International Journal of Selection and Assessment},
+  number = 2,
+  pages = {195--205},
+  title = {Modern Insights About Pearson's Correlation and Least Squares Regression},
+  volume = 9,
+  year = 2001
 }
 
 % Citation for a website
