--- a/latex write up/ack.tex
+++ b/latex write up/ack.tex
@@ -2,4 +2,4 @@
 \section{Acknowledgements} 
 \label{sec:ack} 
 
-This section is optional. But if there are people you'd like to thank for their help with the project --- a person who contributed some insight, friends who volunteered to help out with data collection, etc. --- then this is the place to thank them. Keep it short!
+We would like to thank Dr. Ramanujan for his patient instructions at the beginning of our project, as well as our friends and classmates for their generous encouragement and support. 
