--- a/latex write up/contributions.tex
+++ b/latex write up/contributions.tex
@@ -2,6 +2,7 @@
 \section{Contributions}
 \label{sec:contrib}
 
+A.R.B. and C.Y. worked on the whole project together. All parts were completed with both partners present. A.R.B. and C.Y. both contributed to writing code for preprocessing the data and setting up each of the models. The contributions to the paper were also split equally, with both A.R.B. and C.Y. working on the figures and the individual sections. In the end, both authors proof-read the paper as well.
 %Briefly summarize the contributions of you and your partner in this
 %section. For example: ``A.T. wrote the gradient descent code and ran
 %experiments; J.vN. ran the experiments using scikit-learn's built-in
